deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ecommerce
  namespace: amazon-clone

spec:
  replicas: 3

  selector:
    matchLabels:
      app: ecommerce

  template:
    metadata:
      labels:
        app: ecommerce

    spec:
      containers:
        - name: ecommerce

          image: 781195020338.dkr.ecr.us-east-1.amazonaws.com/amazon-clone/product-service:latest

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "500m"
              memory: "1Gi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8080

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
