service.yaml
apiVersion: v1
kind: Service

metadata:
  name: ecommerce-service
  namespace: ecommerce

spec:

  selector:
    app: ecommerce

  ports:

  - port: 80
    targetPort: 8080

  type: ClusterIP
