ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:

  name: ecommerce-ingress
  namespace: amazon-clone

  annotations:

    kubernetes.io/ingress.class: alb

    alb.ingress.kubernetes.io/scheme: internet-facing

spec:

  rules:

  - host: app.company.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: ecommerce-service

            port:

              number: 80
