networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: ecommerce-network-policy
  namespace: ecommerce

spec:

  podSelector:

    matchLabels:

      app: ecommerce

  policyTypes:

  - Ingress

  ingress:

  - from:

    - podSelector:

        matchLabels:

          app: frontend
